Graphics not working yet, but almost

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="default_stocks_microsoft">MSFT</string>
     <string name="default_stocks_facebook">FB</string>
 
-
+    <string name="title_activity_detail">Stock Detail</string>
     <string name="action_change_units">@string/pref_display_mode_key</string>
 
 
@@ -25,6 +25,9 @@
     <string name="dialog_hint">Symbol (e.g. GOOG)</string>
     <string name="dialog_cancel">Cancel</string>
     <string name="dialog_add">Add</string>
+
+    <!-- Key name for storing quote status in SharedPreferences -->
+    <string name="pref_quote_status_key" translatable="false">quote-status</string>
 
     <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
     <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>
