only widget finetuning left, 80% operational

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,6 @@
     <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
     <string name="toast_no_connectivity">Will refresh when network available.</string>
     <string name="toast_unknown_symbol">The given symbol is unknown.</string>
+    <string name="widget_title">Stock Hawk Widget</string>
 
 </resources>
